@@ -45,6 +45,10 @@ x2goclient (4.1.1.1-0x2go1) UNRELEASED; urgency=medium
     - src/settingswidgets.cpp: don't incorrectly enable whole display settings
       in single display setups. Let debugging mode override this behavior,
       though.
+    - src/onmainwindow.cpp: pass X2GO_RANDR_XINERAMA=[yes,no] to
+      x2gostartagent as an environment variable based upon the xinerama
+      session setting. Has no effect when connecting to older X2Go Server
+      versions and handles startup correctly with X2Go Server 4.1.0.0.
 
   [ Oleksandr Shneyder ]
   * New upstream version (4.1.1.1):
